feat(springboot): complete Spring Boot backend migration — 51 Java files
Architecture: Spring Boot 3.4.2 + Java 17 + MySQL + JWT + Lombok

Models (15):
  User, Ticket, TicketActivity, Notification, NotificationQueue,
  EmailLog, CompanyEmailConfig, Timesheet, TimeCard, SLAPolicy,
  SLABreach, Comment, Approval, Asset, TicketCustomField

Repositories (15): Full JPA repositories for all models with optimized queries

Services (4):
  UserService  — auth (simpleHash backward-compat), CRUD, role lookup
  TicketService — create/update with SLA deadlines, RCA validation, points calc
  SlaService   — policy management, breach tracking, audit logs
  EmailService — queue-based delivery, M365 SMTP, HTML templates, retry logic

Controllers (9):
  AuthController, TicketController, UserController, TimesheetController,
  NotificationController, EmailController, SlaController, DashboardController,
  GlobalExceptionHandler

Security:
  JWT auth + x-user-uid header backward-compat
  BCrypt + SimpleHash (legacy) dual password support
  CORS configured for React frontend (localhost:5173, 3000)
  SQL injection protection via JPA parameterized queries
  Role-based access control

Schedulers:
  SlaScheduler: processEmailQueue (30s), escalateStaleTickets (15min), monitorBreaches (1hr)

Email:
  M365 SMTP (smtp.office365.com:587 STARTTLS)
  HTML templates: created, assigned, status changed, resolved, SLA warning, breached
  Queue with retry: 1m, 5m, 15m, 30m, 1hr backoff

Tests:
  SimpleHash unit tests (verifies JS backward compatibility)
  H2 in-memory test profile

Configuration:
  application.properties — MySQL, JWT, CORS, M365, SLA cron
  application-test.properties — H2 in-memory for CI/CD